fix image size on mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@
 
 /*------general-----*/
 
+
 body {
     margin: 0;
     padding: 0;
@@ -182,7 +183,9 @@ h2 i {
 }
 
 img {
-    max-width: 100%;
+    vertical-align: center;
+    border-style: none;
+    width: 100%;
 }
 
 .photo {
